# sandbox

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .hermes.md  .markdownlintrc.json  .mcp.json  .tmp_patch_config.py  AGENTS.md  HERMES_PROFILE_REPORT.md  HERMES_SYNC_REPORT.md  PLAN.md  PROJECT_RULES.md  README.md  RESEARCH_REPORT.md  SESSION_REPORT.md  agents-system-prompt-context-fix.prompt.md  agents-system-prompt-context-fix.prompt.txt  analyze_skills.py  architecture.md  audit-skills-judge-fix.prompt.md  audit-skills-judge-fix.prompt.txt  backup_hermes.sh  cli-tools.md  collect_data.sh  collect_repo_data.sh  deficient_skills.txt  dev-imp-report.md  devprompts.txt  execute-all-prompts.prompt.md  extract_agents_info.sh  folder-structure.md  greeting.py  hermes-errors.txt  hermes-instructions.txt  judge_batch_10_results.md  judge_batch_11_results.md  judge_batch_12_results.md  judge_batch_13_results.md  judge_batch_14_results.md  judge_batch_15_results.md  (+59 more)
.github/: copilot-instructions.md
.hermes/: bulk-install-skills.sh  e2e-session-test.sh  full-health-check.sh  hook-health-check.sh  mcp-install-plan.md
.playwright-mcp/: page-2026-06-04T21-41-59-460Z.yml  page-2026-06-04T21-42-13-371Z.yml
.tmp/: skills-audit-phase1.py  validate-phases.py
Bash/: .markdownlintrc.json  .prettierrc.ts  AGENTS.md  CLEANUP-REPORT.md  PLAN.md  (+47 more)
projects/mcp-servers/python/: README.md  main.py  pyproject.toml
projects/mcp-servers/rust/: .gitignore  Cargo.toml  README.md
projects/mcp-servers/rust/src/: main.rs  state.rs
projects/mcp-servers/rust/src/tools/: greet.rs  mod.rs
(+9356 files in other folders)
