[package]
name = "rust-mcp-server"
version = "0.1.0"
edition = "2021"
description = "A Rust MCP server implementing the Model Context Protocol"

[dependencies]
rmcp = { version = "0.8.1", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[profile.release]
opt-level = 3
